<resources>
    <string name="app_name">Bazar ABC</string>
    <string name="logo">logo</string>
    <string name="edt_login">Login</string>
    <string name="senha">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="nao_tem_conta">Ainda não tem uma conta? Crie agora, grátis</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="edt_email">E-mail</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="repita_senha">Repita a senha</string>
    <string name="title_activity_meus_anuncios">Meus Anuncios</string>
    <string name="titulo">Titulo</string>
    <string name="valor">Valor</string>
    <string name="descricao">Descrição</string>
    <string name="cadastrar_anuncio">Cadastrar Anuncio</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="regiao">Região</string>
    <string name="categoria">Categoria</string>
    <string name="ligar">Ligar</string>
    <string name="diadema">Diadema</string>
    <string name="santoAndre">Santo André</string>
    <string name="saoBernardo">São Bernardo</string>
    <string name="saoCaetano">São Caetano</string>
    <string name="automoveis">Automóveis</string>
    <string name="imoveis">Imóveis</string>
    <string name="eletronicos">Eletronicos</string>
    <string name="moda">Moda</string>
    <string name="esportes">Esportes</string>
    <string name="musica">Música</string>
    <string name="infantil">Infantil</string>
    <string name="agro">Agro</string>
</resources>
