<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cadastro_edtSenha"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/style_edtitext_login"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/cadastro_edtNome"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/style_edtitext_login"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cadastro_edtEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/style_edtitext_login"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_edtNome" />

    <EditText
        android:id="@+id/cadastro_edtSenhaRepetida"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_edtitext_login"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_edtSenha" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_btn_login"
        android:text="@string/cadastrar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/cadastro_edtSenhaRepetida"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cadastro_edtSenhaRepetida"
        tools:layout_editor_absoluteY="460dp" />


</android.support.constraint.ConstraintLayout>